--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -8,7 +8,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Views\Pages\TestPages\Gravel\" />
+    <Folder Include="Views\Pages\TestPages\Geotextile\" />
+    <Folder Include="Views\Pages\TestPages\SandAndGravel\" />
+    <Folder Include="Views\Pages\TestPages\Sand\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\Pages\SelectPages\SelectNewTestSand.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Views\Pages\SelectPages\SelectNewTestGravel.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Views\Pages\SelectPages\SelectNewTestSandAndGravel.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Views\Pages\SelectPages\SelectNewTestGeotextile.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
