--- a/ProjectServer/appsettings.json
+++ b/ProjectServer/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LocalDatabase.db"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
