--- a/ProjectServer/appsettings.json
+++ b/ProjectServer/appsettings.json
@@ -8,10 +8,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;"
   },
-  "AllowedHosts": "*",
-  "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:5000",
-    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
-  }
+  "AllowedHosts": "*"
 }
