--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -33,6 +33,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\UserControls\AuthUserControl\LoggedUserControl.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Views\UserControls\SelectUserControls\SelectNewTestSand.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
